# comfyui-foxpack

./: .cursorrules  .editorconfig  README.md  __init__.py  pyproject.toml  ruff.toml
examples/: example_workflow.json
py/: latent_helper.py  loader_helper.py  logic_helper.py  model_helper.py  prompter.py  smart_checkpoint_setup.py  upscale_helper.py
